// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Albums 1`] = `
<div>
  <div
    class="max-w-900px svelte-1j0x06a"
  >
    <span
      class="undefined albums svelte-1i39aag"
    >
      <h3
        class="svelte-1i39aag"
      >
        5 albums
      </h3>
       
      <ul
        class="svelte-1i39aag"
      >
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1l44pje"
                  height="256"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1l44pje"
                  height="256"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1l44pje"
                  height="256"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1l44pje"
                  height="256"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1l44pje"
                  height="256"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
     
    <div />
  </div>
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Artists 1`] = `
<div>
  <div
    class="max-w-900px svelte-1j0x06a"
  >
    <span
      class="undefined artists svelte-1i39aag"
    >
      <h3
        class="svelte-1i39aag"
      >
        5 artists
      </h3>
       
      <ul
        class="svelte-1i39aag"
      >
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1l44pje"
                  height="256"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1l44pje"
                  height="256"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1l44pje"
                  height="256"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1l44pje"
                  height="256"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
           
          <span
            class="svelte-1ipxhxy"
            role="article"
          >
            <div
              class="content svelte-1ipxhxy"
            >
              <span
                class="artwork svelte-1ipxhxy"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1l44pje"
                  height="256"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-1ipxhxy"
              >
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-xh4kfu"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-xh4kfu"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-1ipxhxy"
            >
              <h3
                class="svelte-1ipxhxy"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-1ae1g9f"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
  </div>
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Tracks 1`] = `
<div>
  <div
    class="max-w-900px svelte-1j0x06a"
  >
    <span
      class="undefined tracks svelte-1i39aag"
    >
      <h3
        class="svelte-1i39aag"
      >
        5 tracks
      </h3>
       
      <ul
        class="svelte-1i39aag"
      >
        <li
          class="svelte-1i39aag"
        >
          <div
            class="undefined root svelte-8oy723"
          >
            <a
              class="svelte-8oy723"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
                height="256"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-8oy723"
            >
              <span
                class="title svelte-8oy723"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
          <div
            class="undefined root svelte-8oy723"
          >
            <a
              class="svelte-8oy723"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
                height="256"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-8oy723"
            >
              <span
                class="title svelte-8oy723"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
          <div
            class="undefined root svelte-8oy723"
          >
            <a
              class="svelte-8oy723"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
                height="256"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-8oy723"
            >
              <span
                class="title svelte-8oy723"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
          <div
            class="undefined root svelte-8oy723"
          >
            <a
              class="svelte-8oy723"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
                height="256"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-8oy723"
            >
              <span
                class="title svelte-8oy723"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-1i39aag"
        >
          <div
            class="undefined root svelte-8oy723"
          >
            <a
              class="svelte-8oy723"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1l44pje"
                height="256"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-8oy723"
            >
              <span
                class="title svelte-8oy723"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
     
    <div />
  </div>
</div>
`;
